[package]
name = "esmart-mqtt"
description = "eSmart -> MQTT bridge with Home Assistant Discovery support"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "^0.4"
tokio-xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", version = "^4.0" }
tokio = { version = "^1.45", features = ["net", "rt", "rt-multi-thread", "macros", "io-util", "io-std"] }
tokio-stream = "^0.1"
xmpp-parsers = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", version = "^0.21" }
rumqttc = "^0.24"
env_logger = "^0.11"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
clap = { version = "^4.5", features = ["derive", "env"] }

[profile.release]
opt-level = "z" # optimize for size

[[bin]]
name = "esmart_mqtt"
path = "src/main.rs"